--- a/index.html
+++ b/index.html
@@ -19,57 +19,35 @@
       <div class="header-block d-f j-c-b a-i-c container">
          <div class="header-block__main d-f a-i-c">
             <a class="header-block__main--logo" href="index.html">
-               <img src="./assets/img/header/logo-all.svg" alt="logo">
+               <img src="./assets/img/table/logo-user.svg" alt="logo">
             </a>
             <ul class="header-block__main--menu d-f j-c-b a-i-c">
                <li class="header-block__main--menu-item d-f a-i-c">
-                  <a class="header-block__main--menu-item__link active" href="#">Кабинет WB</a>
+                  <a class="header-block__main--menu-item__link" href="#">Заказы</a>
+               </li>
+               <li class="header-block__main--menu-item d-f a-i-c">
+                  <a class="header-block__main--menu-item__link" href="#">Компании</a>
+               </li>
+               <li class="header-block__main--menu-item d-f a-i-c">
+                  <a class="header-block__main--menu-item__link" href="#">Документы</a>
+               </li>
+               <li class="header-block__main--menu-item d-f a-i-c">
+                  <a class="header-block__main--menu-item__link active" href="#">Отчеты</a>
                   <i class="icon icon-caret header-block__main--menu-item__icon"></i>
                   <ul class="header-block__main--menu-item__dropdown">
                      <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Сводка</a>
+                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Отчет по компаниям</a>
                      </li>
                      <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Продажи и заказы</a>
-                     </li>
-                     <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">География заказов</a>
-                     </li>
-                     <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Подключения</a>
+                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Отчет NPS</a>
                      </li>
                   </ul>
                </li>
                <li class="header-block__main--menu-item d-f a-i-c">
-                  <a class="header-block__main--menu-item__link" href="#">Группы</a>
+                  <a class="header-block__main--menu-item__link" href="#">Администраторы</a>
                </li>
                <li class="header-block__main--menu-item d-f a-i-c">
-                  <a class="header-block__main--menu-item__link" href="#">Ozon</a>
-                  <i class="icon icon-caret header-block__main--menu-item__icon"></i>
-                  <ul class="header-block__main--menu-item__dropdown">
-                     <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Категории</a>
-                     </li>
-                     <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Поиск</a>
-                     </li>
-                  </ul>
-               </li>
-               <li class="header-block__main--menu-item d-f a-i-c">
-                  <a class="header-block__main--menu-item__link" href="#">Кабинет WB</a>
-                  <i class="icon icon-caret header-block__main--menu-item__icon"></i>
-                  <ul class="header-block__main--menu-item__dropdown" data-dropdown-box>
-                     <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Категории</a>
-                     </li>
-                     <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Поиск</a>
-                     </li>
-                     <li class="header-block__main--menu-item__dropdown--section">
-                        <a class="header-block__main--menu-item__dropdown--section-link" href="#">Рейтинг
-                           поставщиков</a>
-                     </li>
-                  </ul>
+                  <a class="header-block__main--menu-item__link" href="#">Менеджеры</a>
                </li>
             </ul>
          </div>
@@ -78,35 +56,41 @@
                <input class="input header-block__user--search-form focus" type="text" placeholder="Поиск категории">
                <button class="icon icon-loop header-block__user--search-icon"></button>
             </div>
-            <div class="header-block__user--item cursor-pointer d-f a-i-c" data-expand-click data-expand="false"
+            <div class="cursor-pointer header-block__main--menu-item d-f a-i-c" data-expand-click data-expand="false"
                data-not-outside-expand data-not-outside>
                <div class="header-block__user--item-photo">
-                  <img src="./assets/img/header/Ellipse.png" alt="user">
+                  <img src="./assets/img/table/default-user.png" alt="user">
                </div>
                <i class="icon icon-arrow header-block__user--item-icon" data-expand-icon data-expand-outside-icon></i>
                <div class="user-dropdown" hidden data-expand-box data-sub-outside-expand>
                   <div class="user-dropdown__name">
                      <span class="user-dropdown__name--circle d-f j-c-c a-i-c"></span>
                      <p class="user-dropdown__name--details">Алексей</p>
-                     <span class="user-dropdown__name--info">Подписка до 11.10.2021</span>
                   </div>
                   <ul class="user-dropdown__list">
+
                      <li class="user-dropdown__list--item">
                         <a href="#" class="user-dropdown__list--item-main d-f a-i-c">
-                           <i class="icon icon-coin user-dropdown__list--item-main__icon"></i>
-                           <p class="user-dropdown__list--item-main__text">Подписка и счета</p>
+                           <i class="icon icon-user user-dropdown__list--item-main__icon"></i>
+                           <p class="user-dropdown__list--item-main__text">Рассылка NPS</p>
                         </a>
                      </li>
                      <li class="user-dropdown__list--item">
                         <a href="#" class="user-dropdown__list--item-main d-f a-i-c">
                            <i class="icon icon-user user-dropdown__list--item-main__icon"></i>
-                           <p class="user-dropdown__list--item-main__text">Аккаунт</p>
+                           <p class="user-dropdown__list--item-main__text">Техподдержка</p>
+                        </a>
+                     </li>
+                     <li class="user-dropdown__list--item">
+                        <a href="#" class="user-dropdown__list--item-main d-f a-i-c">
+                           <i class="icon icon-user user-dropdown__list--item-main__icon"></i>
+                           <p class="user-dropdown__list--item-main__text">Сотрудник технической поддержки</p>
                         </a>
                      </li>
                      <li class="user-dropdown__list--item">
                         <a href="#" class="user-dropdown__list--item-main d-f a-i-c">
                            <i class="icon icon-history user-dropdown__list--item-main__icon"></i>
-                           <p class="user-dropdown__list--item-main__text">История запросов</p>
+                           <p class="user-dropdown__list--item-main__text">Аудит</p>
                         </a>
                      </li>
                      <li class="user-dropdown__list--item">
@@ -130,51 +114,45 @@
                      <th>
                         <div class="thead-dropdown d-f j-c-b a-i-c">
                            <p>Дата</p>
-                           <button class="icon icon-burger thead-dropdown__icon"></button>
                         </div>
                      </th>
                      <th>
                         <div class="thead-dropdown d-f j-c-b a-i-c">
                            <p>Продажи</p>
-                           <button class="icon icon-burger thead-dropdown__icon"></button>
                         </div>
                      </th>
                      <th>
                         <div class="thead-dropdown d-f j-c-b a-i-c">
                            <p>Остаток</p>
-                           <button class="icon icon-burger thead-dropdown__icon"></button>
                         </div>
                      </th>
                      <th>
                         <div class="thead-dropdown d-f j-c-b a-i-c">
                            <p>Цена</p>
-                           <button class="icon icon-burger thead-dropdown__icon"></button>
                         </div>
                      </th>
                      <th>
                         <div class="thead-dropdown d-f j-c-b a-i-c">
                            <p>Со скидкой</p>
-                           <button class="icon icon-burger thead-dropdown__icon"></button>
                         </div>
                      </th>
                      <th>
                         <div class="thead-dropdown d-f j-c-b a-i-c">
                            <p>Сумма продаж</p>
-                           <button class="icon icon-burger thead-dropdown__icon"></button>
                         </div>
                      </th>
                   </tr>
                   <tr>
                      <th>
-                        <input type="text" class="input-table cursor-pointer" name="daterange"></th>
+                        <input type="text" class="input-table cursor-pointer" name="daterange">
+                     </th>
                      <th>
                         <div class="d-f a-i-c">
                            <input type="text" class="input-table">
                            <div class="dropdown d-f a-i-c">
-                              <button class="icon icon-filter cursor-pointer" data-expand-click
-                                 data-not-outside data-not-outside-expand data-expand="false"></button>
-                              <div class="dropdown-list" data-expand-box data-outside-expand
-                                 data-not-outside hidden>
+                              <button class="icon icon-filter cursor-pointer" data-expand-click data-not-outside
+                                 data-not-outside-expand data-expand="false"></button>
+                              <div class="dropdown-list" data-expand-box data-outside-expand data-not-outside hidden>
                                  <div class="dropdown">
                                     <button class="dropdown-btn d-f j-c-b a-i-c" data-sub-expand-click
                                        data-sub-not-outside-expand data-not-outside data-expand="false">
@@ -182,8 +160,7 @@
                                        <i class="icon icon-arrow dropdown-btn__arrow" data-sub-expand-icon
                                           data-sub-expand-outside-icon></i>
                                     </button>
-                                    <div class="dropdown-list" hidden data-expand-box
-                                       data-sub-outside-expand>
+                                    <div class="dropdown-list" hidden data-expand-box data-sub-outside-expand>
                                        <span class="dropdown-list__item cursor-pointer d-block"> По
                                           датам</span>
                                        <span class="dropdown-list__item cursor-pointer d-block">По
@@ -208,10 +185,9 @@
                         <div class="d-f a-i-c">
                            <input type="text" class="input-table">
                            <div class="dropdown d-f a-i-c">
-                              <button class="icon icon-filter cursor-pointer" data-expand-click
-                                 data-not-outside data-not-outside-expand data-expand="false"></button>
-                              <div class="dropdown-list" data-expand-box data-outside-expand
-                                 data-not-outside hidden>
+                              <button class="icon icon-filter cursor-pointer" data-expand-click data-not-outside
+                                 data-not-outside-expand data-expand="false"></button>
+                              <div class="dropdown-list" data-expand-box data-outside-expand data-not-outside hidden>
                                  <div class="dropdown">
                                     <button class="dropdown-btn d-f j-c-b a-i-c" data-sub-expand-click
                                        data-sub-not-outside-expand data-not-outside data-expand="false">
@@ -219,8 +195,7 @@
                                        <i class="icon icon-arrow dropdown-btn__arrow" data-sub-expand-icon
                                           data-sub-expand-outside-icon></i>
                                     </button>
-                                    <div class="dropdown-list" hidden data-expand-box
-                                       data-sub-outside-expand>
+                                    <div class="dropdown-list" hidden data-expand-box data-sub-outside-expand>
                                        <span class="dropdown-list__item cursor-pointer d-block"> По
                                           датам</span>
                                        <span class="dropdown-list__item cursor-pointer d-block">По
@@ -245,10 +220,9 @@
                         <div class="d-f a-i-c">
                            <input type="text" class="input-table">
                            <div class="dropdown d-f a-i-c">
-                              <button class="icon icon-filter cursor-pointer" data-expand-click
-                                 data-not-outside data-not-outside-expand data-expand="false"></button>
-                              <div class="dropdown-list" data-expand-box data-outside-expand
-                                 data-not-outside hidden>
+                              <button class="icon icon-filter cursor-pointer" data-expand-click data-not-outside
+                                 data-not-outside-expand data-expand="false"></button>
+                              <div class="dropdown-list" data-expand-box data-outside-expand data-not-outside hidden>
                                  <div class="dropdown">
                                     <button class="dropdown-btn d-f j-c-b a-i-c" data-sub-expand-click
                                        data-sub-not-outside-expand data-not-outside data-expand="false">
@@ -256,8 +230,7 @@
                                        <i class="icon icon-arrow dropdown-btn__arrow" data-sub-expand-icon
                                           data-sub-expand-outside-icon></i>
                                     </button>
-                                    <div class="dropdown-list" hidden data-expand-box
-                                       data-sub-outside-expand>
+                                    <div class="dropdown-list" hidden data-expand-box data-sub-outside-expand>
                                        <span class="dropdown-list__item cursor-pointer d-block"> По
                                           датам</span>
                                        <span class="dropdown-list__item cursor-pointer d-block">По
@@ -282,10 +255,9 @@
                         <div class="d-f a-i-c">
                            <input type="text" class="input-table">
                            <div class="dropdown d-f a-i-c">
-                              <button class="icon icon-filter cursor-pointer" data-expand-click
-                                 data-not-outside data-not-outside-expand data-expand="false"></button>
-                              <div class="dropdown-list" data-expand-box data-outside-expand
-                                 data-not-outside hidden>
+                              <button class="icon icon-filter cursor-pointer" data-expand-click data-not-outside
+                                 data-not-outside-expand data-expand="false"></button>
+                              <div class="dropdown-list" data-expand-box data-outside-expand data-not-outside hidden>
                                  <div class="dropdown">
                                     <button class="dropdown-btn d-f j-c-b a-i-c" data-sub-expand-click
                                        data-sub-not-outside-expand data-not-outside data-expand="false">
@@ -293,8 +265,7 @@
                                        <i class="icon icon-arrow dropdown-btn__arrow" data-sub-expand-icon
                                           data-sub-expand-outside-icon></i>
                                     </button>
-                                    <div class="dropdown-list" hidden data-expand-box
-                                       data-sub-outside-expand>
+                                    <div class="dropdown-list" hidden data-expand-box data-sub-outside-expand>
                                        <span class="dropdown-list__item cursor-pointer d-block"> По
                                           датам</span>
                                        <span class="dropdown-list__item cursor-pointer d-block">По
@@ -319,10 +290,9 @@
                         <div class="d-f a-i-c">
                            <input type="text" class="input-table">
                            <div class="dropdown d-f a-i-c">
-                              <button class="icon icon-filter cursor-pointer" data-expand-click
-                                 data-not-outside data-not-outside-expand data-expand="false"></button>
-                              <div class="dropdown-list" data-expand-box data-outside-expand
-                                 data-not-outside hidden>
+                              <button class="icon icon-filter cursor-pointer" data-expand-click data-not-outside
+                                 data-not-outside-expand data-expand="false"></button>
+                              <div class="dropdown-list" data-expand-box data-outside-expand data-not-outside hidden>
                                  <div class="dropdown">
                                     <button class="dropdown-btn d-f j-c-b a-i-c" data-sub-expand-click
                                        data-sub-not-outside-expand data-not-outside data-expand="false">
@@ -330,8 +300,7 @@
                                        <i class="icon icon-arrow dropdown-btn__arrow" data-sub-expand-icon
                                           data-sub-expand-outside-icon></i>
                                     </button>
-                                    <div class="dropdown-list" hidden data-expand-box
-                                       data-sub-outside-expand>
+                                    <div class="dropdown-list" hidden data-expand-box data-sub-outside-expand>
                                        <span class="dropdown-list__item cursor-pointer d-block"> По
                                           датам</span>
                                        <span class="dropdown-list__item cursor-pointer d-block">По
